@@ -1,3 +1,12 @@
+2005-08-16 Jens Tkotz <jens@peino.de> 1.5.1-RC3-cvs-b8
+
+	* Fix: Wording. 'strg' is german ;) 'ctrl' is more international.
+
+	* Change: Some indenting.
+
+	* "Fix": Change some <td nowrap> and put it into css class.
+		 Affected are class "head" and "title".
+
 2005-08-14  Alan Harder <alan.harder@sun.com>  1.5.1-RC3-cvs-b7
 
 	* Allow access to hidden photos via direct url.
